compiler/testData/diagnostics/tests/coroutines/callableReference/kt7430_wrongClassOnLHS.kt
// !DIAGNOSTICS: -UNUSED_EXPRESSION

class Unrelated()

class Test {
    init {
        Unrelated::<!UNRESOLVED_REFERENCE!>foo<!>
    }

    suspend fun foo() {}
}
